# evm2wast

./: CMakeLists.txt  README.md
binaryen/src/passes/: WasmIntrinsics.cpp
binaryen/src/wasm/: wasm-s-parser.cpp
evm2wasm/: main.cpp
include/: evm2wasm.h
libs/evm2wasm/: evm2wasm.cpp
