cmake_minimum_required(VERSION 3.9)
project(tools)

set(CMAKE_CXX_STANDARD 14)

include_directories(binaryen/src)
include_directories(binaryen/src/abi)
include_directories(binaryen/src/asmjs)
include_directories(binaryen/src/cfg)
include_directories(binaryen/src/emscripten-optimizer)
include_directories(binaryen/src/ir)
include_directories(binaryen/src/passes)
include_directories(binaryen/src/support)
include_directories(binaryen/src/tools)
include_directories(fmt)
include_directories(include)
add_executable(evm2wast
        fmt/fmt/format.cc
        binaryen/src/passes/WasmIntrinsics.cpp
        binaryen/src/abi/abi.h
        binaryen/src/abi/stack.h
        binaryen/src/abi/wasm-object.h
        binaryen/src/asmjs/asm_v_wasm.cpp
        binaryen/src/asmjs/asmangle.cpp
        binaryen/src/asmjs/asmangle.h
        binaryen/src/asmjs/shared-constants.cpp
        binaryen/src/asmjs/shared-constants.h
        binaryen/src/cfg/cfg-traversal.h
        binaryen/src/cfg/liveness-traversal.h
        binaryen/src/cfg/Relooper.cpp
        binaryen/src/cfg/Relooper.h
        binaryen/src/emscripten-optimizer/istring.h
        binaryen/src/emscripten-optimizer/optimizer-shared.cpp
        binaryen/src/emscripten-optimizer/optimizer.h
        binaryen/src/emscripten-optimizer/parser.cpp
        binaryen/src/emscripten-optimizer/parser.h
        binaryen/src/emscripten-optimizer/simple_ast.cpp
        binaryen/src/emscripten-optimizer/simple_ast.h
        binaryen/src/emscripten-optimizer/snprintf.h
        binaryen/src/ir/abstract.h
        binaryen/src/ir/bits.h
        binaryen/src/ir/block-utils.h
        binaryen/src/ir/branch-utils.h
        binaryen/src/ir/cost.h
        binaryen/src/ir/count.h
        binaryen/src/ir/effects.h
        binaryen/src/ir/equivalent_sets.h
        binaryen/src/ir/ExpressionAnalyzer.cpp
        binaryen/src/ir/ExpressionManipulator.cpp
        binaryen/src/ir/find_all.h
        binaryen/src/ir/function-utils.h
        binaryen/src/ir/global-utils.h
        binaryen/src/ir/hashed.h
        binaryen/src/ir/import-utils.h
        binaryen/src/ir/iteration.h
        binaryen/src/ir/label-utils.h
        binaryen/src/ir/literal-utils.h
        binaryen/src/ir/load-utils.h
        binaryen/src/ir/local-graph.h
        binaryen/src/ir/LocalGraph.cpp
        binaryen/src/ir/localize.h
        binaryen/src/ir/manipulation.h
        binaryen/src/ir/memory-utils.h
        binaryen/src/ir/module-utils.h
        binaryen/src/ir/names.h
        binaryen/src/ir/properties.h
        binaryen/src/ir/trapping.h
        binaryen/src/ir/type-updating.h
        binaryen/src/ir/utils.h
        binaryen/src/passes/CoalesceLocals.cpp
        binaryen/src/passes/CodeFolding.cpp
        binaryen/src/passes/CodePushing.cpp
        binaryen/src/passes/ConstHoisting.cpp
        binaryen/src/passes/DeadCodeElimination.cpp
        binaryen/src/passes/DuplicateFunctionElimination.cpp
        binaryen/src/passes/ExtractFunction.cpp
        binaryen/src/passes/Flatten.cpp
        binaryen/src/passes/FuncCastEmulation.cpp
        binaryen/src/passes/I64ToI32Lowering.cpp
        binaryen/src/passes/Inlining.cpp
        binaryen/src/passes/InstrumentLocals.cpp
        binaryen/src/passes/InstrumentMemory.cpp
        binaryen/src/passes/intrinsics-module.h
        binaryen/src/passes/LegalizeJSInterface.cpp
        binaryen/src/passes/LocalCSE.cpp
        binaryen/src/passes/LogExecution.cpp
        binaryen/src/passes/MemoryPacking.cpp
        binaryen/src/passes/MergeBlocks.cpp
        binaryen/src/passes/MergeLocals.cpp
        binaryen/src/passes/Metrics.cpp
        binaryen/src/passes/NameList.cpp
        binaryen/src/passes/OptimizeInstructions.cpp
        binaryen/src/passes/pass.cpp
        binaryen/src/passes/passes.h
        binaryen/src/passes/PickLoadSigns.cpp
        binaryen/src/passes/PostEmscripten.cpp
        binaryen/src/passes/Precompute.cpp
        binaryen/src/passes/Print.cpp
        binaryen/src/passes/PrintCallGraph.cpp
        binaryen/src/passes/RedundantSetElimination.cpp
        binaryen/src/passes/RelooperJumpThreading.cpp
        binaryen/src/passes/RemoveImports.cpp
        binaryen/src/passes/RemoveMemory.cpp
        binaryen/src/passes/RemoveNonJSOps.cpp
        binaryen/src/passes/RemoveUnusedBrs.cpp
        binaryen/src/passes/RemoveUnusedModuleElements.cpp
        binaryen/src/passes/RemoveUnusedNames.cpp
        binaryen/src/passes/ReorderFunctions.cpp
        binaryen/src/passes/ReorderLocals.cpp
        binaryen/src/passes/ReReloop.cpp
        binaryen/src/passes/SafeHeap.cpp
        binaryen/src/passes/SimplifyLocals.cpp
        binaryen/src/passes/SpillPointers.cpp
        binaryen/src/passes/SSAify.cpp
        binaryen/src/passes/TrapMode.cpp
        binaryen/src/passes/Untee.cpp
        binaryen/src/passes/Vacuum.cpp
        binaryen/src/support/archive.cpp
        binaryen/src/support/archive.h
        binaryen/src/support/bits.cpp
        binaryen/src/support/bits.h
        binaryen/src/support/colors.cpp
        binaryen/src/support/colors.h
        binaryen/src/support/command-line.cpp
        binaryen/src/support/command-line.h
        binaryen/src/support/file.cpp
        binaryen/src/support/file.h
        binaryen/src/support/hash.h
        binaryen/src/support/json.h
        binaryen/src/support/learning.h
        binaryen/src/support/name.h
        binaryen/src/support/path.cpp
        binaryen/src/support/path.h
        binaryen/src/support/permutations.h
        binaryen/src/support/safe_integer.cpp
        binaryen/src/support/safe_integer.h
        binaryen/src/support/sorted_vector.h
        binaryen/src/support/threads.cpp
        binaryen/src/support/threads.h
        binaryen/src/support/timing.h
        binaryen/src/support/unique_deferring_queue.h
        binaryen/src/support/utilities.h
        binaryen/src/tools/execution-results.h
        binaryen/src/tools/fuzzing.h
        binaryen/src/tools/js-wrapper.h
        binaryen/src/tools/optimization-options.h
        binaryen/src/tools/spec-wrapper.h
        binaryen/src/tools/tool-utils.h
        binaryen/src/wasm/literal.cpp
        binaryen/src/wasm/wasm-binary.cpp
        binaryen/src/wasm/wasm-emscripten.cpp
        binaryen/src/wasm/wasm-interpreter.cpp
        binaryen/src/wasm/wasm-io.cpp
        binaryen/src/wasm/wasm-s-parser.cpp
        binaryen/src/wasm/wasm-type.cpp
        binaryen/src/wasm/wasm-validator.cpp
        binaryen/src/wasm/wasm.cpp
        binaryen/src/asm2wasm.h
        binaryen/src/asm_v_wasm.h
        binaryen/src/binaryen-c.cpp
        binaryen/src/binaryen-c.h
        binaryen/src/compiler-support.h
        binaryen/src/literal.h
        binaryen/src/mixed_arena.h
        binaryen/src/parsing.h
        binaryen/src/pass.h
        binaryen/src/pretty_printing.h
        binaryen/src/shared-constants.h
        binaryen/src/shell-interface.h
        binaryen/src/wasm-binary.h
        binaryen/src/wasm-builder.h
        binaryen/src/wasm-emscripten.h
        binaryen/src/wasm-interpreter.h
        binaryen/src/wasm-io.h
        binaryen/src/wasm-module-building.h
        binaryen/src/wasm-printing.h
        binaryen/src/wasm-s-parser.h
        binaryen/src/wasm-traversal.h
        binaryen/src/wasm-type.h
        binaryen/src/wasm-validator.h
        binaryen/src/wasm.h
        binaryen/src/wasm2asm.h
        evm2wasm/main.cpp
        include/evm2wasm.h
        include/wast-async.h
        include/wast.h
        libs/evm2wasm/evm2wasm.cpp
        )
target_link_libraries (evm2wast /usr/lib/x86_64-linux-gnu/libpthread.so)
